--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,13 +6,13 @@ phases:
       python: 3.x  # Make sure this matches your Lambda runtime
   pre_build:
     commands:
-      - echo Installing source dependencies...
+      - echo No external dependencies to install.
       # Uncomment and adjust the following line if you have dependencies:
       # - pip install -r requirements.txt -t .
   build:
     commands:
       - echo Build started on `date`
-      - zip function.zip lambda_function.py # Adjust the Python file name if different
+      # No need to zip if Lambda is written directly in the console
       - aws lambda update-function-code --function-name UpdateVisitorCount --zip-file fileb://function.zip
   post_build:
     commands:
