--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,7 +4,7 @@ phases:
   post_build:
     commands:
       - echo Build completed on `date`
-      - aws s3 sync . s3://challengeproject --delete
+      - aws s3 sync . s3://challengeproject --delete --dryrun
 
 artifacts:
   files:
