--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,7 +4,7 @@ phases:
   post_build:
     commands:
       - echo "Syncing files to S3"
-      - aws s3 sync . s3://challengeproject --delete --exclude "*" --include "index.html
+      - aws s3 sync . s3://challengeproject --delete --exclude "*" --include "index.html"
 
 artifacts:
   files:
